# crow_vision

./: .gitignore  README.md  ann_visualization.py  crow_yolact_wrappers.py  environment.yml  yolact.yml  yolact_inference.py
crow_camera_ros2/: package.xml
crow_image_streamer_ros2/crow_image_streamer_ros2/: image_streamer_node.py
crow_vision_ros2/: setup.py
crow_vision_ros2/crow_vision_ros2/: detector.py
data/models/yolact/: .gitignore  default_resnet101fpn.dvc  tools_2020_01_13_topview_try1.dvc
data/results/: .gitignore  2020_01_13_try1_tools_topview.dvc  2020_01_13_try1_tools_yolact_human.dvc
ros2/: README.md
ros2/src/: .rosinstall
ros2/src/collectors/: package.xml  setup.cfg  setup.py
ros2/src/collectors/collectors/: action_collector.py  calib_collector.py  motion_collector.py
ros2/src/collectors/launch/: collect_actions.launch.py  collect_images.launch.py
ros2/src/crow_camera_ros2/: setup.cfg  setup.py
ros2/src/crow_camera_ros2/crow_camera_ros2/: camera_node.py
ros2/src/crow_image_streamer_ros2/: package.xml  setup.cfg  setup.py
ros2/src/crow_image_streamer_ros2/crow_image_streamer_ros2/: image_streamer_node.py
ros2/src/crow_vision_ros2/: package.xml  setup.cfg  setup.py
ros2/src/crow_vision_ros2/config/: bkp_camera_transformation_data.yaml  calibration_input.txt  camera_transformation_data.yaml  rs_60.yaml  rs_fast.yaml  rs_hires.yaml  rs_native.yaml  rs_native435.yaml  rs_native455.yaml
ros2/src/crow_vision_ros2/crow_vision_ros2/: calibrator.py  config.json  config_affordance.json  crow_realsense_config.json  detector.py  detector_edge.py  detector_nvidia_pose.py  detector_parallel.py  detector_pose.py  filter_node.py  locator.py  marker_detector.py  match3d.py  merger.py  output.txt  parallel_cam.py  particle_filter_tester.py  pcl_cacher.py  pose_query.py  test_database.py  visualizator.py
ros2/src/crow_vision_ros2/crow_vision_ros2/filters/: __init__.py  cam_filter.py  particle_filter.py
ros2/src/crow_vision_ros2/crow_vision_ros2/nvidia_pose/: human_pose.json
ros2/src/crow_vision_ros2/crow_vision_ros2/pcl_processing/: plane_model.py
ros2/src/crow_vision_ros2/crow_vision_ros2/tracker/: tracker.py  tracker_avatar.py  tracker_base.py  tracker_config.py  tracker_trajectory.py
ros2/src/crow_vision_ros2/crow_vision_ros2/tracker/tracker_backup_3_8_21__13_31/: tracker.py  tracker_base.py
ros2/src/crow_vision_ros2/crow_vision_ros2/utils/: __init__.py  convertor_ros_open3d.py  get_camera_transformation.py  markers_for_print.py  opencv_multiplot.py  pcl_utils.py  point_cloud2.py  profiling.py  show_hands.py  test_point_in_polyhedron.py  tester_cam_trans.py  tf_utils.py
ros2/src/crow_vision_ros2/launch/: all_cameras.launch.py  cameras_detection.launch.py  crow_object.launch.py  dual_detection_cameras.launch.py  full_coco.launch.py  full_crow_object.launch.py  full_dual.launch.py  single_camera.launch.py
ros2/src/crow_vision_ros2/scripts/: camera_transform_extractor
ros2/src/crow_vision_ros2/test/: tracker_test.py
tools/: diamond_detector.py  generate_markers.py  insp.rviz  pose_calibration.py  realsense_device_manager.py
