<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crow_image_streamer_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 Publisher node for CROW. Streams data from image folder. Alternative to camera input.</description>
  <maintainer email="radoslav.skoviera@cvut.cz">syxtreme</maintainer>
  <license>AGPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>os</exex_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>cv2</exex_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exex_depend>
  <exec_depend>glob<exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
