<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crow_vision_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="radoslav.skoviera@cvut.cz">syxtreme</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>crow_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>opencv-contrib-python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>commentjson</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>dill</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>filterpy</exec_depend>
  <exec_depend>transforms3d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
